<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timeConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF4EF"
    tools:context=".TimeActivity">

    <FrameLayout
        android:id="@+id/frameTimeActivity"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:background="#EFF4EF"
        app:layout_constraintBottom_toTopOf="@id/timeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mascotTimeActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="80dp"
            app:srcCompat="@drawable/blockythree"
            tools:srcCompat="@drawable/blockythree" />
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeText"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/sessionSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="0"
...
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/studybtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_weight="0"
        android:gravity="center"
...
